2011-01-18  Ingo Weinzierl <ingo@intevation.de>

	* reports/gebuehren_parameterliste.jrxml,
	  reports/gebuehrenbescheid.jrxml: Anpassungen der Schriftgröße und bessere
	  Behandlung von Fließtexten.

2011-01-17  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Die Dateiauswahl für den Probenahmeauftrag und Gebührenbescheid filtert
	  nun die möglichen Dateien - es werden nur noch PDF Dateien erlaubt.

2011-01-17  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Die Fahrtzeit muss nun im Format HH:mm eingegeben werden - die Sekunden
	  nicht länger relevant.

2011-01-17  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/mappings/basis/BasisSachbearbeiter.java:
	  Eine neue Funktion hinzugefügt, die es erlaubt, alle in der Datenbank
	  enthaltenen Sachbearbeiter abzufragen.

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Statt eines Textfelds zum Editieren eines Sachbearbeiters wird nun eine
	  Combobox angezeigt, die alle in der DB enthaltenen Sachbearbeiter enthält.
	  Der Probenhameauftrag wird nun auch mit allen zum gewählten Sachbearbeiter
	  relevanten Informationen befüllt.

2011-01-17  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Beim Erstellen der kasse.txt wird nun das Kassenzeichen des Betreibers
	  geschrieben. Außerdem wird darauf geachtet, dass die letzte Zahlenfolge in
	  der Zeile die richtige Länge von 19 Ziffern besitzt. Andernfalls wird
	  diese in der Mitte mit Nullen aufgefüllt.

	* src/de/bielefeld/umweltamt/aui/utils/DateUtils.java: Eine neue Konstante
	  hinzugefügt, welche das Format beschreibt, wie es in kasse.txt gebraucht
	  wird.

2011-01-17  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java: In