@@ -1,5 +1,13 @@
 2011-01-18  Ingo Weinzierl <ingo@intevation.de>
 
+	* src/de/bielefeld/umweltamt/aui/mappings/atl/AtlProbenahmen.java,
+	  reports/gebuehren_parameterliste.jrxml: Das Ergebnis der Analyse pro
+	  Parameter wird nun in zwei Spalten aufgeteilt - dem Zahlenwert und der
+	  Einheit. Dies verbessert dies Lesbarkeit der Ergebnisse, da die die
+	  Zahlenwerte nun rechts- und die Einheiten linksbündig ausgerichtet sind.
+
+2011-01-18  Ingo Weinzierl <ingo@intevation.de>
+
 	* reports/gebuehren_parameterliste.jrxml,
 	  reports/gebuehrenbescheid.jrxml: Anpassungen der Schriftgröße und bessere
 	  Behandlung von Fließtexten.
